# fastapi-portfolio

./: .coverage  .gitignore  README.md  database.py  main.py  models.py  pyproject.toml
.github/workflows/: tests.yml
database/: database.py
models/: __init__.py  artwork.py  tag.py
routers/: artworks.py
schemas/: artwork_schema.py
services/: tag_service.py
templates/: admin.html  gallery.html
tests/: conftest.py  test_artworks_api.py  test_homepage.py  tests_tags.py
